// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: EpicCellLayout horizontal 1`] = `
<div
  className="d-flex w-100 justify-content-between align-items-center"
>
  horizontal
</div>
`;

exports[`Component: EpicCellLayout vertical 1`] = `
<div
  className="d-flex flex-column w-100 h-100 justify-content-around"
>
  vertical
</div>
`;
